Share the FileManager used when -release is set